2/12/2021 BN: Added create_player and cleaned up save and load tag setting
2/11/2021 DH: Added save / load tag checks and set up save_dungeon and load_dungeon skeletons
2/8/2021 BN/DH: Added simple path generation
2/5/2021 BN: Added stair generation and fixed some bugs
2/5/2021 DH: Added a check to avoid two rooms touching
2/4/2021 DH: Created Makefile and changed formatting.
2/4/2021 CB: Set up code, made create_rooms method, set_dungeon method, and
print_dungeon method.